--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -119,7 +119,7 @@ en:
       shared_access:
         info: Setting to disabled will remove the button from the Room options dropdown, preventing users from sharing rooms
         title: Allow Users to Share Rooms
-      subtitle: Customize Greenlight
+      subtitle: Customize BrainStake
       tabs:
         appearance: Appearance
         administration: Administration
@@ -266,10 +266,10 @@ en:
       contact_admin: If you are not an administrator, please contact one.
       continue: I'd like to stay using 1.0.
       notice: >
-        Greenlight encountered a database migration error.<br>
-        This may be because you haven't updated to Greenlight 2.0.
+        BrainStake encountered a database migration error.<br>
+        This may be because you haven't updated to BrainStake 2.0.
       upgrade: Show me how to upgrade to 2.0!
-      version: We've released a new version of Greenlight, but your database isn't compatible.
+      version: We've released a new version of BrainStake, but your database isn't compatible.
     messages:
       blank: can't be blank
       too_short: is too short
@@ -281,7 +281,7 @@ en:
       domain: must end with "%{email_domain}"
     no_provider:
       message: The site you are trying to access is not enabled
-      help: Please contact your system administrator to setup Greenlight
+      help: Please contact your system administrator to setup BrainStake
     not_found:
       message: Sorry! The page you are looking for does not exist.
       help: Is it possible its been removed?
@@ -336,11 +336,11 @@ en:
     search:
       start: Start searching...
   landing:
-    about: "%{href} is a simple front-end for your Brainstake One open-source web conferencing server. You can create your own rooms to host sessions, or join others using a short and convenient link."
+    about: "Brainstake One, your all in one learning platform. Create account and start acquire the skill you have been missing"
     welcome: Welcome to Brainstake One.
-    video: Watch our tutorial on using Greenlight
+    video: Get Started
     upgrade: Show me how to upgrade to 2.0!
-    version: We've released a new version of Greenlight, but your database isn't compatible.
+    version: We've released a new version of BrainStake, but your database isn't compatible.
   language_default: Default (browser language)
   ldap_error: Unable to connect to the LDAP server. Please check your LDAP configuration in the env file and ensure your server is running.
   login: Sign in
@@ -354,10 +354,10 @@ en:
         signin: To access your personal rooms, click the button below and sign in.
         signin_link: Sign In
         signup:
-          info: A new user has signed up to use Greenlight.
-          more-info: To allow this user to access Greenlight you must approve their account in organization settings.
+          info: A new user has signed up to use BrainStake.
+          more-info: To allow this user to access BrainStake you must approve their account in organization settings.
           admins_link: Visit the Organization Page
-          subject: New Greenlight User Sign Up
+          subject: New BrainStake User Sign Up
           username: The user signed up with the name %{name} and the email %{email}.
         subject: Account Approved
         username: Your username is %{email}.
@@ -372,9 +372,9 @@ en:
         signup_link: Sign Up
         valid: "The invite is valid until: %{date}"
         signup:
-          info: A user that was invited has signed up to use Greenlight.
+          info: A user that was invited has signed up to use BrainStake.
           admins_link: Visit the Organization Page
-          subject: New Greenlight User Sign Up
+          subject: New BrainStake User Sign Up
           username: The user signed up with the name %{name} and the email %{email}.
         subject: Invitation to join Brainstake One
         username: Your username is %{email}.
