--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -305,7 +305,7 @@ en:
   footer:
     legal: Terms
     privpolicy: Privacy Policy
-    powered_by: Powered by %{href}.
+    powered_by: Maintained by %{href}.
   forgot_password:
     subtitle: Forgot Password
     email: Email
